# CSE230-Haskell-Sokoban

./: .gitignore  CHANGELOG.md  CSE230-Haskell-Sokoban.cabal  LICENSE  README.md  stack.yaml
app/: Main.hs
gameConfigs/: gameData.txt
src/: GameComponent.hs  GameController.hs  GameView.hs  Lib.hs  UI.hs
test/: Test.hs
