cabal-version:      1.12
name:               CSE230-Haskell-Sokoban
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Yuxiao Sean Ran
maintainer:         yuran@ucsd.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
data-dir: gameConfigs
data-files: gameData.txt

executable sokoban-game
    ghc-options: -threaded
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        brick,
        matrix,
        microlens,
        text,
        vty,
        CSE230-Haskell-Sokoban
    hs-source-dirs: app
    default-language: Haskell2010

test-suite sokoban-test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: test
    ghc-options: -threaded
    build-depends:
        base,
        test-framework,
        test-framework-hunit,
        HUnit,
        CSE230-Haskell-Sokoban
    default-language: Haskell2010

library
    exposed-modules:
        Lib
    ghc-options: -W
    build-depends:
        base,
        brick,
        matrix,
        microlens,
        text,
        vty
    hs-source-dirs: src
    default-language: Haskell2010
